K8S/microservices/auth-service/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  labels:
    app: auth-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-microservice
  template:
    metadata:
      labels:
        app: auth-microservice
    spec:
      containers:
        - name: auth-microservice
          image: zaydimr/staffing-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: auth-port
          resources:
            limits:
              memory: "4Gi"
              cpu: "500m"
