K8S/microservices/auth-service/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-microservice
  ports:
    - port: 8080
      protocol: TCP
      targetPort: auth-port
