K8S/microservices/auth-service/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-cert: "auth-app-tls"
  labels:
    name: auth-ingress
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
      - auth.grow-as-team.com
      secretName: auth-app-tls
  rules:
    - host: auth.grow-as-team.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: auth-service
                port: 
                  number: 8080
